<resources>
    <string name="google_map_api_key">AIzaSyDMI0DbGwiFi5O2i9C9RKLqLIKtoJi9xSE</string>
    <string name="app_name">StatsTrack</string>
    <string name="email">Email</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">or</string>
    <string name="continue_google">Continue with Google</string>
    <string name="do_not_have_account">You don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="text_code">A code has been sent in your email. It expires in:</string>
    <string name="six_digit_code">6-digit Code</string>
    <string name="birthdate">Birthdate</string>
    <string name="phone_number">Phone Number</string>
    <string name="complete_profile">Complete your Profile</string>
    <string name="stay_home">Do you enjoy spending time in the comfort of your home?</string>
    <string name="are_you_married">Are you married?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="select_hobbies">Select up to 7 hobbies</string>
    <string name="select_expenses">Select up to 7 expenses</string>
    <string name="search">Search</string>
    <string name="my_businesses">My Businesses</string>
    <string name="coupons">Coupons</string>
    <string name="profile">Profile</string>
    <string name="select_edu">Select your Education Level</string>
    <string name="select_income">Select your Income</string>
    <string name="select_industry">Select your Industry</string>
    <string name="select_work_hours">Select your Working Hours</string>
    <string name="add">Add</string>
    <string name="no_businesses">You do not have any business yet</string>
    <string name="no_coupons">You do not have any discount coupons yet</string>
    <string name="purchased">Purchase Date</string>
    <string name="redeemed">Redeem Date</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_data">User Data</string>
    <string name="professional_data">Professional Data</string>
    <string name="personal_data">Personal Data</string>
    <string name="hobbies_data">Hobbies Data</string>
    <string name="expenses_data">Expenses Data</string>
    <string name="general">General</string>
    <string name="logout">Logout</string>
    <string name="languages">Languages</string>
    <string name="info">Info</string>
    <string name="save">Save</string>
    <string name="submit">Submit</string>
    <string name="reviews">Reviews</string>
    <string name="add_review">Add Review</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="get_coupon_message_1">Code free of charge</string>
    <string name="get_coupon_message_2">You can have 10% discount with each coupon</string>
    <string name="get_coupon_message_3">You can get a coupon every 3 days for the same business</string>
    <string name="get_coupon_message_4">Code is valid for 3 days</string>
    <string name="get_offer">Get Offer</string>
    <string name="business_photos">Business Photos</string>
    <string name="business_info">Business Info</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="update">Update</string>
    <string name="stats">Stats</string>
    <string name="redeem_coupon">Redeem your coupon</string>
    <string name="redeem">Redeem</string>
    <string name="set_location">Set Location</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="renew">Renew License</string>
    <string-array name="hobbies">
        <item>Reading</item>
        <item>Gardening</item>
        <item>Cooking and Baking</item>
        <item>Painting and Drawing</item>
        <item>Sports and Physical Activities</item>
        <item>Photography</item>
        <item>Playing Musical Instruments</item>
        <item>Traveling</item>
        <item>Crafting</item>
        <item>Fishing</item>
        <item>Model Building</item>
        <item>Collecting</item>
        <item>Hiking and Camping</item>
        <item>DIY Home Improvement</item>
        <item>Bird Watching</item>
        <item>Cycling</item>
        <item>Meditation and Mindfulness</item>
        <item>Dancing</item>
        <item>Volunteering</item>
        <item>Board Games and Puzzles</item>
        <item>Writing</item>
        <item>Fitness and Exercise</item>
        <item>Comics and Graphic Novels</item>
        <item>Sculpting</item>
        <item>Astrology and Astronomy</item>
        <item>Sewing and Quilting</item>
        <item>Archery</item>
        <item>Genealogy</item>
        <item>Metal Detecting</item>
        <item>Vintage and Classic Cars</item>
        <item>Other</item>
    </string-array>
    <string-array name="expenses">
        <item>Housing Expenses</item>
        <item>Utilities</item>
        <item>Transportation Costs</item>
        <item>Food and Groceries</item>
        <item>Healthcare Expenses</item>
        <item>Education Expenses</item>
        <item>Debt Payments</item>
        <item>Insurance Premiums</item>
        <item>Entertainment and Leisure</item>
        <item>Personal Care and Grooming</item>
        <item>Clothing and Apparel</item>
        <item>Savings and Investments</item>
        <item>Taxes</item>
        <item>Childcare and Education</item>
        <item>Home and Garden</item>
        <item>Subscriptions and Memberships</item>
        <item>Charitable Donations</item>
        <item>Travel and Vacation</item>
        <item>Legal and Financial Services</item>
        <item>Emergency Fund and Contingencies</item>
        <item>Other</item>
    </string-array>
    <string-array name="country_codes">
        <item>+355</item> 
        <item>+376</item> 
        <item>+43</item>  
        <item>+375</item> 
        <item>+32</item>  
        <item>+387</item> 
        <item>+359</item> 
        <item>+385</item> 
        <item>+357</item> 
        <item>+420</item> 
        <item>+45</item>  
        <item>+372</item> 
        <item>+358</item> 
        <item>+33</item>  
        <item>+49</item>  
        <item>+30</item>  
        <item>+36</item>  
        <item>+354</item> 
        <item>+353</item> 
        <item>+39</item>  
        <item>+383</item> 
        <item>+371</item> 
        <item>+423</item> 
        <item>+370</item> 
        <item>+352</item> 
        <item>+356</item> 
        <item>+373</item> 
        <item>+377</item> 
        <item>+382</item> 
        <item>+31</item>  
        <item>+389</item> 
        <item>+47</item>  
        <item>+48</item>  
        <item>+351</item> 
        <item>+40</item>  
        <item>+7</item>   
        <item>+378</item> 
        <item>+381</item> 
        <item>+421</item> 
        <item>+386</item> 
        <item>+34</item>  
        <item>+46</item>  
        <item>+41</item>  
        <item>+380</item> 
        <item>+44</item>  
        <item>+379</item> 
    </string-array>
    <string-array name="country_names">
        <item>Albania</item>
        <item>Andorra</item>
        <item>Austria</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Bosnia and Herzegovina</item>
        <item>Bulgaria</item>
        <item>Croatia</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Estonia</item>
        <item>Finland</item>
        <item>France</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>Ireland</item>
        <item>Italy</item>
        <item>Kosovo</item>
        <item>Latvia</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Malta</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Montenegro</item>
        <item>Netherlands</item>
        <item>North Macedonia</item>
        <item>Norway</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>San Marino</item>
        <item>Serbia</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Spain</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Ukraine</item>
        <item>United Kingdom</item>
        <item>Vatican City</item>
    </string-array>
    <string-array name="income_categories">
        <item>Poverty Line</item>
        <item>Low Income</item>
        <item>Lower Middle Income</item>
        <item>Median Income</item>
        <item>Upper Middle Income</item>
        <item>High Income</item>
        <item>Very High Income</item>
    </string-array>
    <string-array name="professional_sectors">
        <item>Information Technology</item>
        <item>Healthcare</item>
        <item>Finance and Banking</item>
        <item>Education</item>
        <item>Engineering</item>
        <item>Manufacturing and Production</item>
        <item>Retail</item>
        <item>Hospitality and Tourism</item>
        <item>Marketing and Advertising</item>
        <item>Government and Public Administration</item>
        <item>Legal</item>
        <item>Agriculture</item>
        <item>Media and Journalism</item>
        <item>Art and Design</item>
        <item>Nonprofit and Social Services</item>
        <item>Environmental and Sustainability</item>
        <item>Construction and Skilled Trades</item>
        <item>Automotive</item>
        <item>Transportation and Logistics</item>
        <item>Sports and Fitness</item>
        <item>Online Businesses</item>
        <item>Pharmaceuticals and Healthcare Research</item>
        <item>Entertainment and Arts</item>
        <item>Tech Startups and Entrepreneurship</item>
        <item>Real Estate and Property Management</item>
        <item>Food and Beverage</item>
        <item>Aviation and Aerospace</item>
        <item>Renewable Energy and Green Technology</item>
        <item>Fitness and Wellness</item>
        <item>Emergency Services and Public Safety</item>
        <item>Student</item>
        <item>Retired</item>
    </string-array>
    <string-array name="education_levels">
        <item>Primary</item>
        <item>Secondary</item>
        <item>Higher</item>
        <item>Technical</item>
    </string-array>
    <string-array name="employment_types">
        <item>FullTime Employment</item>
        <item>PartTime Employment</item>
        <item>Overtime Hours</item>
        <item>Shift Work</item>
        <item>Flexible Hours</item>
        <item>Seasonal Work</item>
        <item>Freelancing Work</item>
        <item>Contract Work</item>
        <item>Remote Work</item>
        <item>Night Shifts</item>
        <item>Weekend Work</item>
        <item>Unemployed</item>
    </string-array>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
</resources>