<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    tools:context=".fragments.common.NavbarFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/navbarFragmentSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_search"
            android:drawableTint="@color/tealDark"
            android:textColor="@color/tealDark"
            android:paddingTop="10sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/search" />

        <TextView
            android:id="@+id/navbarFragmentMyBusinesses"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_business"
            android:drawableTint="@color/black"
            android:paddingTop="10sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/my_businesses" />

        <TextView
            android:id="@+id/navbarFragmentCoupons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_coupon"
            android:drawableTint="@color/black"
            android:paddingTop="10sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/coupons" />

        <TextView
            android:id="@+id/navbarFragmentProfile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/ic_profile"
            android:drawableTint="@color/black"
            android:paddingTop="12sp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/profile" />
    </LinearLayout>
</FrameLayout>