<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.businesspages.BusinessEditFragment">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                android:text="@string/business_photos" />

            <LinearLayout
                android:id="@+id/businessEditFragmentPhotosLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

            </LinearLayout>

            <ImageView
                android:id="@+id/businessEditFragmentAddPhotoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_plus" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:layout_marginTop="20dp"
                android:text="@string/business_info" />

            <EditText
                android:id="@+id/businessEditFragmentTitle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/title"
                android:text="Title" />

            <EditText
                android:id="@+id/businessEditFragmentDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:hint="@string/description"
                android:text="loreeeeeeeeeeemmmmmmmmmmmmmmmmmmmmmmmmmmmmm" />

            <Spinner
                android:id="@+id/businessEditFragmentSpinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/businessEditFragmentAddress"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="text"
                android:text="Karaoli kai Dimitriou 80"
                android:hint="@string/address"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/businessEditFragmentSaveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                style="@style/ButtonStyle"
                android:text="@string/save" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>